--- a/l10n/download-button-shortcode.pot
+++ b/l10n/download-button-shortcode.pot
@@ -1,5 +1,5 @@
 # Copyright (C) 2025 H. Peter Pfeufer
-# This file is distributed under the same license as the Download Button Shortcode plugin.
+# This file is distributed under the GPLv3.
 msgid ""
 msgstr ""
 "Project-Id-Version: Download Button Shortcode 2.4\n"
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2025-03-25T18:32:28+00:00\n"
+"POT-Creation-Date: 2025-03-25T18:56:25+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.11.0\n"
 "X-Domain: download-button-shortcode\n"
